# netbox-ceph-plugin

./: README.md  pyproject.toml
examples/: clusters.csv  import_yaml.py  osds.csv  osds.yaml  status_notes.csv
netbox_osd/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_extensions.py  urls.py  views.py
netbox_osd/api/: serializers.py  urls.py  views.py
netbox_osd/migrations/: 0001_initial.py  0002_cephcluster.py  0003_cephcluster_site.py
netbox_osd/templates/netbox_osd/: cephcluster.html  cephosd.html  cephosdsstatusnote.html
netbox_osd/templates/netbox_osd/inc/: device_osd_panel.html
