[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-osd-plugin"
version = "0.1.0"
description = "NetBox plugin for tracking Ceph OSDs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.entry-points."netbox_plugins"]
netbox_osd = "netbox_osd:config"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_osd*"]
